# fourth-year-project

./: .gitignore  .gitmodules  .style.yapf  README.md  lint.sh  requirements.txt
JRAP/: python.sbatch
JRAP/Images/Varying-step_size-on-best-model-268/: explanation.txt
JRAP/Images/testing_argument_change/: explanation.txt
JRAP/src/: attack_experimentation.py  jrap.py
JRAP/tests/prompts/: 009_prompts.txt
Models/JRAP/: jrap.sbatch  jrap_experiments.sbatch  pyproject.toml  python.sbatch  python_experiments.sbatch
Models/JRAP/src/: attack.py  attack_experimentation.py  jrap.py  sd.py  text_optimising.py  utils.py  utils_text.py
Models/experiments/DDD/: attack.py  ddd.sbatch  generation.py
Models/experiments/DDD_fast/: attack.py  ddd.py  dddfast.sbatch
Models/experiments/DiffusionGuard/: diffguard.sbatch  generation.py  main.py  python.sbatch  readme.md
Models/experiments/photoguard_fast/: README.md  demo_simple_attack_inpainting.ipynb  utils.py
Models/experiments/watermark_attacker/: .gitignore  README.md  wmattacker.py
experiments/DDD/: attack.ipynb
experiments/DDD/dataset/: 1028_captions.txt  1113_captions.txt  1185_captions.txt  119_captions.txt  1249_captions.txt  1269_captions.txt  1279_captions.txt  1280_captions.txt  1288_captions.txt  129_captions.txt  1303_captions.txt  1322_captions.txt  1378_captions.txt  1423_captions.txt  143_captions.txt  1477_captions.txt  1483_captions.txt  1485_captions.txt  160_captions.txt  204_captions.txt  241_captions.txt  283_captions.txt  293_captions.txt  304_captions.txt  312_captions.txt  316_captions.txt  383_captions.txt  385_captions.txt  394_captions.txt  395_captions.txt  40_captions.txt  426_captions.txt  439_captions.txt  451_captions.txt  464_captions.txt  482_captions.txt  489_captions.txt  500_captions.txt  501_captions.txt  505_captions.txt  (+48 more)
experiments/DDD_frequency_domain/: attack.py  compress.ipynb  pyproject.toml  rename.py
experiments/MetaCloak/: requirement.txt
experiments/photoguard/dataset/: 1021_captions.txt  1040_captions.txt  1067_captions.txt  1070_captions.txt  1077_captions.txt  1078_captions.txt  1087_captions.txt  1089_captions.txt  1094_captions.txt  1135_captions.txt  1141_captions.txt  120_captions.txt  1216_captions.txt  123_captions.txt  1240_captions.txt  1245_captions.txt  1284_captions.txt  1320_captions.txt  1343_captions.txt  1365_captions.txt  1369_captions.txt  1403_captions.txt  1404_captions.txt  1442_captions.txt  1443_captions.txt  1471_captions.txt  171_captions.txt  189_captions.txt  194_captions.txt  231_captions.txt  234_captions.txt  286_captions.txt  317_captions.txt  375_captions.txt  384_captions.txt  412_captions.txt  458_captions.txt  476_captions.txt  511_captions.txt  512_captions.txt  (+25 more)
experiments/photoguard/notebooks/: attack.py  attack_robustness.py  python.sbatch
implementations/DDD/: attack.ipynb  attack.py  attack_robustness.py  colab_attack.ipynb  compress.ipynb  ddd.py  ddddjpeg.err  display.ipynb  generation.py  joboutput_1024662.err  jupyter.err  launchJupyter.sbatch  out.txt  output.txt  prompts.txt  pyproject.toml  python.sbatch  replayjupyter.sbatch  requirements.txt  sbatchPleasePleaseWork  sbatchPleasePleaseWork copy  test_records.txt  utils.py  utils_text.py
implementations/DDD/.ipynb_checkpoints/: attack-checkpoint.ipynb
implementations/DDD/attack/: pipeline.py
implementations/DDD/dataset/: 1003_captions.txt  1008_captions.txt  1009_captions.txt  102_captions.txt  1038_captions.txt  1041_captions.txt  (+218 more)
implementations/DDD_frequency_domain/: attack.ipynb  attack.py  compress.ipynb  ddd.py  generation.py  mask.py
implementations/DDD_old/: generation.py  mask.ipynb  python.sbatch  requirements.txt
implementations/DiffJpegDDD/: display.ipynb  info.sbatch  python.sbatch  python_experiments.sbatch
implementations/TestedModels/watermark_attacker/: LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt  test_sd3.py  watermarker.py
implementations/photoguard_optimised/: pyproject.toml
implementations/photoguard_optimised/notebooks/: attack.py  demo_complex_attack_inpainting.ipynb  demo_simple_attack_inpainting.ipynb  generating_fake_images.ipynb  utils.py
implementations/vis_attention_map/: pgd.ipynb  pyproject.toml  vis.ipynb
implementations/watermark_attacker/: README.md  demo.ipynb  demo_sd3.ipynb  playground.ipynb  pyproject.toml  regen_pipe.py  requirements.txt  sd3.py  test_sd3.py  utils.py  watermarker.py  wmattacker.py
(+1470 files in other folders)
