[tool.poetry]
name = "photoguard"
version = "0.1.0"
description = "photoguard"
authors = ["Jakub Czarlinski <jakubczarlinski@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
diffusers = "^0.31.0"
transformers = "^4.46.2"
scipy = "^1.14.1"
accelerate = "^1.1.1"
torchvision = "^0.20.1"
xformers = "^0.0.28.post3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
