[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "WatermarkAttacker"
version = "0.1.0"
description = "Watermark attacking."
authors = ["Jakub Czarlinski <jakubczarlinski@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
accelerate = "^1.1.1"
bm3d = "^4.0.3"
compressai = "^1.2.6"
diffusers = "^0.31.0"
invisible-watermark = "^0.2.0"
onnxruntime = "^1.20.0"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
torch = "^2.5.1"
torch-fidelity = "^0.3.0"
torchvision = "^0.20.1"
transformers = "^4.46.2"
bitsandbytes = "^0.44.1"
sentencepiece = "^0.2.0"
